--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <!--Nav-->
         <nav class="absolute z-10 mx-auto w-screen h-[auto] bg-gray-800">
             <div class="flex items-center justify-center w-screen h-auto bg-gray-900">
-                <h1 class="mx-4 text-pretty font-semibold text-gray-500">Don Vazku Barberia en Olivos</h1>
-                <p class="mx-4 text-pretty font-semibold text-gray-500">Av. Maipu 2265</p>
+                <h1 class="mx-4 text-pretty md:text-2xl font-semibold text-gray-500">Don Vazku Barberia en Olivos</h1>
+                <p class="mx-4 text-pretty md:text-2xl font-semibold text-gray-500">Av. Maipu 2265</p>
             </div>
-                <div class="relative flex h-[auto] items-center justify-between">
-                    <div class="mx-4 flex items-center">
+                <div class="mx-4 relative flex h-[auto] items-center justify-between">
+                    <div class="flex items-center">
                         <!-- Menu button-->
                         <button id="menu-toggle" type="button" class="z-10 relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="menu" aria-expanded="false">
-                            <svg class="block size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
+                            <svg class="block size-6 md:size-10" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
                             </svg>
                         </button>
@@ -92,31 +92,29 @@
                 Tu navegador no soporta el elemento de video.
             </video>
             <div class="mb-20 flex flex-grow items-end z-10">
-                <button class="mr-4 z-10 flex flex-2 shrink-0 bg-yellow-600 text-gray-900 hover:bg-yellow-500 font-bold py-4 px-8 rounded">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="mr-2 size-6">
+                <button onclick="window.location.href='/agenda.html'" class="mr-4 z-10 flex items-center flex-2 shrink-0 bg-yellow-600 text-gray-900 hover:bg-yellow-500 font-bold py-4 px-8 rounded">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="mr-2 size-6 md:size-10">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 7.5v11.25m-18 0A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75m-18 0v-7.5A2.25 2.25 0 0 1 5.25 9h13.5A2.25 2.25 0 0 1 21 11.25v7.5m-9-6h.008v.008H12v-.008ZM12 15h.008v.008H12V15Zm0 2.25h.008v.008H12v-.008ZM9.75 15h.008v.008H9.75V15Zm0 2.25h.008v.008H9.75v-.008ZM7.5 15h.008v.008H7.5V15Zm0 2.25h.008v.008H7.5v-.008Zm6.75-4.5h.008v.008h-.008v-.008Zm0 2.25h.008v.008h-.008V15Zm0 2.25h.008v.008h-.008v-.008Zm2.25-4.5h.008v.008H16.5v-.008Zm0 2.25h.008v.008H16.5V15Z" />
                     </svg>
-                    TURNOS DISPONIBLES
+                    <p class="md:text-2xl">TURNOS DISPONIBLES</p>
                 </button>
             </div>
-            <a href="https://wa.me/+541155040774" target="_blank" class="fixed bottom-4 right-4 z-10 flex p-4 bg-green-500 rounded-full hover:text-white hover:bg-green-600 transition duration-300">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+            <a href="https://wa.me/+541155040774" target="_blank" class="fixed bottom-4 right-4 z-10 flex p-4 md:p-6 bg-green-500 rounded-full hover:text-white hover:bg-green-600 transition duration-300">
+                <svg class="md:size-14" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
                     <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
                 </svg>
             </a>
         </section>
 
-        <section class="w-screen">
-            <div class="bg-gradient-to-b from-gray-900 to-white h-screen px-6 py-4 sm:py-32 lg:overflow-visible lg:px-0">
-                <div class="mx-auto flex flex-col max-w-2xl gap-y-10 lg:mx-0 lg:max-w-none lg:grid-cols-2 lg:items-start lg:gap-y-10">
-                    <div class="h-[30vh] lg:col-span-2 lg:col-start-1 lg:row-start-1 lg:mx-auto lg:grid lg:w-full lg:max-w-7xl lg:grid-cols-2 lg:gap-x-8 lg:px-8">
-                        <div class="lg:max-w-lg">
-                            <h2 class="mt-4 text-base/7 font-semibold text-yellow-500">LA BARBERIA</h2>
-                            <p class="text-pretty text-4xl font-semibold tracking-tight text-white sm:text-5xl">NUESTRO ESPACIO</p>
-                            <p class="mt-10 text-base/7 font-semibold text-white">Desde 2020, hemos creado un espacio donde nuestro objetivo es ofrecer a cada cliente una experiencia única y personalizada, combinando cortes de cabello y afeitado con un ambiente cómodo y un servicio excepcional.</p>
-                        </div>
+        <section class="h-[100vh] w-screen">
+            <div class="bg-gradient-to-b from-gray-900 to-white px-6 py-1">
+                <div class="mx-auto flex flex-col max-w-2xl gap-y-10 md:gap-y-0">
+                    <div class="h-[30vh]">
+                        <h2 class="mt-4 text-base/7 font-semibold text-yellow-500">LA BARBERIA</h2>
+                        <p class="text-pretty text-4xl font-semibold tracking-tight text-white sm:text-5xl">NUESTRO ESPACIO</p>
+                        <p class="mt-10 text-base/7 font-semibold text-white">Desde 2020, hemos creado un espacio donde nuestro objetivo es ofrecer a cada cliente una experiencia única y personalizada, combinando cortes de cabello y afeitado con un ambiente cómodo y un servicio excepcional.</p>
                     </div>
-                    <div class="h-[auto] px-1 py-10">
+                    <div class="h-[auto] px-1 py-10 md:px-20 md:py-0">
                         <img class="rounded-xl" src="Interior-Barberia.jpg" alt="">
                     </div>
                 </div>
@@ -127,10 +125,8 @@
             <div class="bg-white px-6 py-4">
                 <div class="mx-auto flex flex-col max-w-2xl gap-y-10 lg:mx-0 lg:max-w-none lg:grid-cols-2 lg:items-start lg:gap-y-10">
                     <div class="lg:col-span-2 lg:col-start-1 lg:row-start-1 lg:mx-auto lg:grid lg:w-full lg:max-w-7xl lg:grid-cols-2 lg:gap-x-8 lg:px-8">
-                        <div class="lg:max-w-lg">
-                            <h2 class="text-base/7 font-semibold text-yellow-500">NUESTRO TRABAJO</h2>
-                            <p class="mt-2 text-pretty text-4xl font-semibold tracking-tight text-black sm:text-5xl">SERVICIOS</p>
-                        </div>
+                        <h2 class="mt-4 text-base/7 font-semibold text-yellow-500">NUESTRO TRABAJO</h2>
+                        <p class="text-pretty text-4xl font-semibold tracking-tight text-black sm:text-5xl">SERVICIOS</p>
                     </div>
                     
                     <article class="rounded-3xl bg-gray-700 ring-1 ring-gray-900/10 overflow-hidden">
@@ -226,43 +222,43 @@
 
 <!--Contact-->
     <section class="mx-auto p-6">
-        <div class="bg-white px-6 py-4">
-            <div class="mx-auto flex flex-col max-w-2xl gap-y-10 lg:mx-0 lg:max-w-none lg:grid-cols-2 lg:items-start lg:gap-y-10">
+        <div class="bg-white py-4">
+            <div class="mx-auto flex flex-col max-w-2xl gap-y-10">
                 <div class="lg:col-span-2 lg:col-start-1 lg:row-start-1 lg:mx-auto lg:grid lg:w-full lg:max-w-7xl lg:grid-cols-2 lg:gap-x-8 lg:px-8">
                     <div class="lg:max-w-lg">
                         <h2 class="text-base/7 font-semibold text-yellow-500">VISITANOS</h2>
-                        <p class="mt-2 text-pretty text-4xl font-semibold tracking-tight text-black sm:text-5xl">CONTACTO</p>
+                        <p class="text-pretty text-4xl font-semibold tracking-tight text-black sm:text-5xl">CONTACTO</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="flex flex-col items-center rounded-lg">
+        <div class="mx-auto flex flex-col rounded-lg">
             <div class="">
                 <!-- Mapa -->
-                <div class="overflow-hidden shadow-md">
-                    <iframe class="w-full h-64 md:h-80 rounded-xl" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13150.081307505514!2d-58.4880049!3d-34.515043!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb19d387d7533%3A0xc5fa288c121fc4f0!2sDon%20Vazku!5e0!3m2!1ses-419!2sar!4v1733002178502!5m2!1ses-419!2sar" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <div class="overflow-hidden">
+                    <iframe class="w-full h-64 rounded-xl" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13150.081307505514!2d-58.4880049!3d-34.515043!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb19d387d7533%3A0xc5fa288c121fc4f0!2sDon%20Vazku!5e0!3m2!1ses-419!2sar!4v1733002178502!5m2!1ses-419!2sar" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
-                <div class="my-4 flex flex-col">
-                    <div class="gap-4 flex items-center justify-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
+                <div class="my-4 flex flex-col gap-y-4">
+                    <div class="gap-4 flex items-center justify-start">
+                        <svg class="size-10" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
                             <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A32 32 0 0 1 8 14.58a32 32 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10"/>
                             <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4m0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
                         </svg>
-                        <p class="text-2xl text-gray-700">Dirección: Av. Maipu 2265</p>
+                        <p class="text-2xl font-semibold text-gray-700">Dirección: Av. Maipu 2265</p>
                     </div>
-                    <div class="gap-4 flex items-center justify-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-phone" viewBox="0 0 16 16">
+                    <div class="gap-4 flex items-center justify-start">
+                        <svg class="size-10" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-phone" viewBox="0 0 16 16">
                             <path d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
                             <path d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/>
                         </svg>
-                        <p class="text-2xl text-gray-700">Teléfono: 0123456789</p>
+                        <p class="text-2xl font-semibold text-gray-700">Teléfono: 0123456789</p>
                     </div>
-                    <div class="gap-4 flex items-center justify-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
+                    <div class="gap-4 flex items-center justify-start">
+                        <svg class="size-10" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
                             <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
                             <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0"/>
                         </svg>
-                        <p class="text-2xl text-gray-700">Horario: Lun a Sab de 10 a 20</p>
+                        <p class="text-2xl font-semibold text-gray-700">Horario: Lun a Sab de 10 a 20</p>
                     </div>
                 </div>
             </div>
@@ -270,8 +266,8 @@
     </section>
 
     <footer class="bg-gray-800 text-white py-6">
-        <div class="flex flex-col md:flex-row justify-between items-center">
-            <div class="mb-4 md:mb-0">
+        <div class="flex flex-col justify-between items-center">
+            <div class="mb-4">
                 <h5 class="text-lg font-bold">Don Vazku</h5>
                 <p class="text-sm">© 2024 Don Vazku. Todos los derechos reservados.</p>
             </div>
