--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-AR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,9 +11,25 @@
     <meta name="google-site-verification" content="agregar codigo">
     <!-- Probar rendimiento en google https://pagespeed.web.dev/ -->
     <!-- Probar schema https://search.google.com/ -->
+    <link rel="canonical" href="https://donvazku.com.ar">
+    <link rel="next" href="agenda.html">
+    <link rel="manifest" href="assets/site.webmanifest">
+    <!-- Favicon estándar -->
+    <link rel="icon" href="assets/favicon.ico" sizes="16x16" type="image/x-icon">
+    <!-- Favicon en diferentes tamaños -->
+    <link rel="icon" href="assets/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="assets/android-chrome-192x192.png" sizes="192x192" type="image/png">
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" sizes="180x180">
+    <link rel="apple-touch-icon" href="assets/android-chrome-192x192.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="assets/android-chrome-512x512.png" sizes="512x512">
+    <!-- Otros iconos -->
+    <link rel="icon" href="assets/favicon-16x16.png" sizes="16x16" type="image/png">
+</head>
+
     <script type="application/ld+json">
         {
-            "@context": "http://schema.org",
+            "@context": "https://schema.org",
             "@type": "BarberShop",
             "name": "Don Vazku",
             "address": {
@@ -22,11 +38,11 @@
             "addressLocality": "Olivos",
             "addressRegion": "Vicente Lopez",
             "postalCode": "1636",
-            "addressCountry": "Argentina"
+            "addressCountry": "AR"
             },
             "telephone": "+54 1155040774",
             "openingHours": "Mo-Sa 10:00-20:00",
-            "url": "http://www.donvazku.com.ar"
+            "url": "https://www.donvazku.com.ar"
         }
         </script>
         <script src="https://cdn.tailwindcss.com"></script>
@@ -92,12 +108,12 @@
                 Tu navegador no soporta el elemento de video.
             </video>
             <div class="mb-40 lg:mb-4 flex flex-grow items-end z-10">
-                <button onclick="window.location.href='/agenda.html'" class="mr-4 z-10 flex items-center flex-2 shrink-0 bg-yellow-600 text-gray-900 hover:bg-yellow-500 font-bold py-4 px-8 rounded">
+                <a href="agenda.html" class="mr-4 z-10 flex items-center flex-2 shrink-0 bg-yellow-600 text-gray-900 hover:bg-yellow-500 font-bold py-4 px-8 rounded">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="mr-2 size-6 md:size-10 lg:size-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 7.5v11.25m-18 0A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75m-18 0v-7.5A2.25 2.25 0 0 1 5.25 9h13.5A2.25 2.25 0 0 1 21 11.25v7.5m-9-6h.008v.008H12v-.008ZM12 15h.008v.008H12V15Zm0 2.25h.008v.008H12v-.008ZM9.75 15h.008v.008H9.75V15Zm0 2.25h.008v.008H9.75v-.008ZM7.5 15h.008v.008H7.5V15Zm0 2.25h.008v.008H7.5v-.008Zm6.75-4.5h.008v.008h-.008v-.008Zm0 2.25h.008v.008h-.008V15Zm0 2.25h.008v.008h-.008v-.008Zm2.25-4.5h.008v.008H16.5v-.008Zm0 2.25h.008v.008H16.5V15Z" />
                     </svg>
                     <p class="md:text-2xl lg:text-lg">TURNOS DISPONIBLES</p>
-                </button>
+                </a>
             </div>
             <a href="https://wa.me/+541155040774" target="_blank" class="fixed bottom-4 md:bottom-8 lg:bottom-4 md:right-8 right-4 z-10 flex p-4 md:p-6 lg:p-4 bg-green-500 rounded-full hover:text-white hover:bg-green-600 transition duration-300">
                 <svg class="md:size-14 lg:size-10" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
