--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <!--Header starts here-->
     <header>
         <!--Nav-->
-        <nav class="absolute flex flex-col z-10 mx-auto w-screen h-[14vh] lg:h-20 bg-gray-800">
-            <div class="flex items-center justify-center w-screen h-auto lg:h-6 bg-gray-900">
+        <nav class="absolute flex flex-col z-10 mx-auto w-screen h-[14vh] sm:h-[24vh] lg:h-20 bg-gray-800">
+            <div class="flex items-center justify-center w-screen h-auto sm:h-[10vh] lg:h-6 bg-gray-900">
                 <h1 class="mx-4 text-pretty md:text-2xl lg:text-lg font-semibold text-gray-500">Don Vazku Barberia en Olivos</h1>
                 <p class="mx-4 text-pretty md:text-2xl lg:text-lg font-semibold text-gray-500">Av. Maipu 2265</p>
             </div>
@@ -102,30 +102,30 @@
     </header>
 
     <main>
-        <section class="w-screen h-[100vh] relative bg-black flex flex-col items-center lg:items-start justify-between pt-1 lg:pt-0 lg:px-8">
+        <section class="w-screen h-[100vh] relative bg-black flex flex-col items-center md:items-start lg:items-start justify-between pt-1 lg:pt-0 lg:px-8">
             <video autoplay loop muted class="absolute top-0 left-0 w-full h-full object-cover z-0">
                 <source src="IntroDonVazku.mp4" type="video/mp4">
                 Tu navegador no soporta el elemento de video.
             </video>
-            <div class="mb-40 lg:mb-4 flex flex-grow items-end z-10">
-                <a href="agenda.html" class="mr-4 z-10 flex items-center flex-2 shrink-0 bg-yellow-600 text-gray-900 hover:bg-yellow-500 font-bold py-4 px-8 rounded">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="mr-2 size-6 md:size-10 lg:size-6">
+            <div class="mb-40 md:mb-4 md:ml-4 lg:mb-4 flex flex-grow items-end z-10">
+                <a href="agenda.html" class="mr-4 z-10 flex items-center flex-2 shrink-0 bg-yellow-600 text-gray-900 hover:bg-yellow-500 font-bold py-4 md:py-1 px-8 md:px-4 rounded">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="mr-2 size-6 md:size-4 lg:size-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 7.5v11.25m-18 0A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75m-18 0v-7.5A2.25 2.25 0 0 1 5.25 9h13.5A2.25 2.25 0 0 1 21 11.25v7.5m-9-6h.008v.008H12v-.008ZM12 15h.008v.008H12V15Zm0 2.25h.008v.008H12v-.008ZM9.75 15h.008v.008H9.75V15Zm0 2.25h.008v.008H9.75v-.008ZM7.5 15h.008v.008H7.5V15Zm0 2.25h.008v.008H7.5v-.008Zm6.75-4.5h.008v.008h-.008v-.008Zm0 2.25h.008v.008h-.008V15Zm0 2.25h.008v.008h-.008v-.008Zm2.25-4.5h.008v.008H16.5v-.008Zm0 2.25h.008v.008H16.5V15Z" />
                     </svg>
-                    <p class="md:text-2xl lg:text-lg">TURNOS DISPONIBLES</p>
+                    <p class="md:text-md lg:text-lg">TURNOS DISPONIBLES</p>
                 </a>
             </div>
-            <a href="https://wa.me/+541155040774" target="_blank" class="fixed bottom-4 md:bottom-8 lg:bottom-4 md:right-8 right-4 z-10 flex p-4 md:p-6 lg:p-4 bg-green-500 rounded-full hover:text-white hover:bg-green-600 transition duration-300">
-                <svg class="md:size-14 lg:size-10" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+            <a href="https://wa.me/+541155040774" target="_blank" class="fixed bottom-4 md:bottom-4 lg:bottom-4 md:right-8 right-4 z-10 flex p-4 md:p-6 lg:p-4 bg-green-500 rounded-full hover:text-white hover:bg-green-600 transition duration-300">
+                <svg class="md:size-10 lg:size-10" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
                     <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
                 </svg>
             </a>
         </section>
 
-        <section class="h-[110vh] w-screen">
+        <section class="h-[110vh] md:h-[200vh] w-screen">
             <div class="flex flex-col gap-y-10 bg-gradient-to-b from-gray-900 to-white px-6 py-1">
                 <div class="mx-auto flex flex-col lg:justify-between lg:flex-row lg:py-10 max-w-2xl lg:max-w-none gap-y-10 md:gap-y-0">
-                    <div class="h-[50vh]">
+                    <div class="h-[50vh] md:h-[100vh]">
                         <h2 class="mt-4 text-base/7 font-semibold text-yellow-500">LA BARBERIA</h2>
                         <p class="text-pretty text-4xl font-semibold tracking-tight text-white sm:text-5xl">NUESTRO ESPACIO</p>
                         <p class="lg:w-[40vw] mt-10 text-base/7 font-semibold text-white">Desde 2020 hemos dedicado nuestro esfuerzo para crear Don Vazku, nuestra barbería ubicado en el corazón de Olivos, un espacio donde nuestro objetivo es ofrecer a cada cliente una experiencia única y personalizada.</p>
@@ -134,7 +134,7 @@
                         <br>
                         <p class="lg:w-[40vw] mt-0 text-base/7 font-semibold text-white">¡Te esperamos!</p>
                     </div>
-                    <div class="h-[auto] px-1 py-10 md:px-20 md:py-0">
+                    <div class="h-[auto] md:h-[100vh] px-1 py-10 md:px-40 md:py-0">
                         <img class="lg:w-[30vw] rounded-xl" src="Interior-Barberia.jpg" alt="">
                     </div>
                 </div>
@@ -149,7 +149,7 @@
                         <p class="text-pretty text-4xl font-semibold tracking-tight text-black sm:text-5xl">SERVICIOS</p>
                     </div>
                     
-                    <div class="flex flex-col gap-y-10 lg:flex lg:gap-x-10">
+                    <div class="flex flex-col gap-y-10 md:px-20 lg:flex lg:gap-x-10">
                         <article class="lg:w-[30vw] rounded-3xl bg-gray-700 ring-1 ring-gray-900/10 overflow-hidden">
                             <img src="Card-Corte.jpg" alt="Color" class="w-full h-[50vh] object-cover">
                             <div class="p-4">
@@ -243,7 +243,7 @@
     </main>
 
 <!--Redes-->
-    <section class="h-[100vh] mx-auto mt-10 p-6">
+    <section class="h-[100vh] md:h-[110vh] mx-auto mt-10 p-6">
         <div class="bg-white">
             <div class="mx-auto flex flex-col max-w-2xl lg:max-w-none gap-y-10">
                 <div class="lg:max-w-lg">
@@ -252,26 +252,26 @@
                 </div>
             </div>
         </div>
-        <article class="h-[80vh] flex flex-col justify-between py-20 p-4 my-10 bg-gray-700 rounded-3xl ring-4 ring-inset ring-yellow-500">
+        <article class="h-[80vh] md:h-[140vh] flex flex-col justify-between py-20 md:py-10 p-4 my-10 md:my-4 md:mx-24 bg-gray-700 rounded-3xl ring-4 ring-inset ring-yellow-500">
             <div class="flex flex-col m-4">
                 <h3 class="text-base/7 font-semibold text-yellow-500">TU OPINIÓN IMPORTA</h3>
-                <p class="text-pretty text-4xl font-semibold tracking-tight text-white sm:text-5xl">DEJA UNA RESEÑA</p>
+                <p class="text-pretty text-4xl md:text-2xl font-semibold tracking-tight text-white sm:text-5xl">DEJA UNA RESEÑA</p>
                 <a target="_blank" href="https://g.co/kgs/4U5Eo2T" class="flex items-center justify-center gap-x-4 bg-yellow-500 mt-8 block rounded-md px-3.5 py-2.5 text-center text-lg font-semibold text-white ring-1 ring-inset ring-white hover:ring-black hover:text-black">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-google" viewBox="0 0 16 16">
                         <path d="M15.545 6.558a9.4 9.4 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.7 7.7 0 0 1 5.352 2.082l-2.284 2.284A4.35 4.35 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.8 4.8 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.7 3.7 0 0 0 1.599-2.431H8v-3.08z"/>
                     </svg>
                 </a>
             </div>
-            <div class="m-4">
+            <div class="m-4 md:h-[140vh]">
                 <h3 class="text-base/7 font-semibold text-yellow-500">REDES</h3>
-                <p class="text-pretty text-4xl font-semibold tracking-tight text-white sm:text-5xl">SEGUINOS</p>
-                <div class="w-full flex flex-col">
-                    <a target="_blank" href="https://www.instagram.com/donvazku/?hl=es" class="flex items-center justify-center gap-x-4 bg-yellow-500 mt-8 block rounded-md px-3.5 py-2.5 text-center text-lg font-semibold text-white ring-1 ring-inset ring-white hover:ring-black hover:text-black">
+                <p class="text-pretty text-4xl md:text-2xl font-semibold tracking-tight text-white sm:text-5xl">SEGUINOS</p>
+                <div class="w-full flex flex-col md:flex-row md:justify-center md:gap-x-4">
+                    <a target="_blank" href="https://www.instagram.com/donvazku/?hl=es" class="md:w-full flex items-center justify-center gap-x-4 bg-yellow-500 mt-8 block rounded-md px-3.5 py-2.5 text-center text-lg font-semibold text-white ring-1 ring-inset ring-white hover:ring-black hover:text-black">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
                             <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
                         </svg>
                     </a>
-                    <a target="_blank" href="https://www.tiktok.com/@donvazku" class="flex items-center justify-center gap-x-4 bg-yellow-500 mt-8 block rounded-md px-3.5 py-2.5 text-center text-lg font-semibold text-white ring-1 ring-inset ring-white hover:ring-black hover:text-black">
+                    <a target="_blank" href="https://www.tiktok.com/@donvazku" class="md:w-full flex items-center justify-center gap-x-4 bg-yellow-500 mt-8 block rounded-md px-3.5 py-2.5 text-center text-lg font-semibold text-white ring-1 ring-inset ring-white hover:ring-black hover:text-black">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-tiktok" viewBox="0 0 16 16">
                             <path d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"/>
                         </svg>
