--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <br>
                         <p class="lg:w-[40vw] mt-0 text-base/7 font-semibold text-white">¡Te esperamos!</p>
                     </div>
-                    <div class="h-[auto] md:h-[100vh] px-1 py-10 md:px-40 md:py-0">
+                    <div class="h-[40vh] md:h-[100vh] px-1 py-10 md:px-40 md:py-0">
                         <img class="lg:w-[30vw] rounded-xl" src="Interior-Barberia.jpg" alt="">
                     </div>
                 </div>
