--- a/agenda.html
+++ b/agenda.html
@@ -113,14 +113,14 @@ rows.forEach(row => {
             .catch(error => console.error('Error al cargar los datos:', error));
     </script>
 
-<footer class="bg-gray-800 text-white py-6">
-    <div class="flex flex-col md:flex-row justify-between items-center">
-        <div class="mx-4 mb-4">
+<footer class="border-t-4 bg-gray-900 text-white py-6">
+    <div class="flex flex-col justify-between items-center">
+        <div class="mb-4">
             <h5 class="text-lg font-bold">Don Vazku</h5>
             <p class="text-sm">© 2024 Don Vazku. Todos los derechos reservados.</p>
         </div>
-        <div class="mx-4 mb-4 md:mb-0">
-            <p>Desarrollado por DevSquad.</p>
+        <div class="mb-4 md:mb-0">
+            <p>Desarrollado por <a class="font-semibold" target="_blank" href="https://luminosparks.com.ar">LuminoSparks.</a></p>
         </div>
     </div>
 </footer>
