--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <!--Home de la web-->
         <section class="w-screen h-[100vh] relative bg-black flex flex-col items-center md:items-start lg:items-start justify-between pt-1 lg:pt-0 lg:px-8">
             <video autoplay loop muted class="absolute top-0 left-0 w-full h-full object-cover z-0">
-                <source src="IntroDonVazku.mp4" type="video/mp4">
+                <source src="assets/Images/IntroDonVazku.mp4" type="video/mp4">
                 Tu navegador no soporta el elemento de video.
             </video>
             <div class="mb-40 md:mb-4 md:ml-4 lg:mb-4 flex flex-grow items-end z-10">
